--- a/style.css
+++ b/style.css
@@ -12,6 +12,39 @@ body, html {
     top: 0;
     left: 0;
     right: 0;
-    background-color: black;
-    opacity: 75%;
+    background-color: #fdfcf7;
+    opacity: 65%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+#inFrontOfBg {
+    padding-top: 3%;
+    margin-top: 79px;
+    background: rgba(17, 18, 19, 0.45);
+    padding-bottom: 35%;
+    color: white;
+    text-align: center;
+    /*opacity: 45%;*/
+}
+
+#checkOutNewReview {
+    background-color: #7138ad;
+    border: none;
+    border-radius: 10px;
+    width: 15%;
+    height: 75px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-size: 22px;
+}
+
+#checkOutNewReview:hover {
+    background-color: #8b4cd0;
+}
+
+#solidInFrontOfBg {
+    position: absolute;
+    width: 100%;
+    background-color: #111213;
+    padding-bottom: 25%;
 }
