--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body, html {
     top: 0;
     left: 0;
     right: 0;
-    background-color: #fdfcf7;
+    background: rgba(17, 18, 19, 0.95);
     opacity: 65%;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    /*border-bottom-left-radius: 10px;*/
+    /*border-bottom-right-radius: 10px;*/
 }
 
 #inFrontOfBg {
     padding-top: 3%;
-    margin-top: 79px;
+    margin-top: 75px;
     background: rgba(17, 18, 19, 0.45);
     padding-bottom: 35%;
     color: white;
@@ -40,6 +40,7 @@ body, html {
 
 #checkOutNewReview:hover {
     background-color: #8b4cd0;
+    cursor: pointer;
 }
 
 #solidInFrontOfBg {
@@ -47,4 +48,40 @@ body, html {
     width: 100%;
     background-color: #111213;
     padding-bottom: 25%;
+}
+
+#headerHome, #headerGames, #headerContacts {
+    background: rgba(0,0,0,0);
+    /*border: 1px red solid;*/
+    border: none;
+    width: 10%;
+    height: 75px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-size: 22px;
+    border-radius: 5px;
+
+}
+
+#headerRegister, #headerLogin {
+    position: relative;
+    left: 44%;
+    background: rgba(0,0,0,0);
+    /*border: 1px red solid;*/
+    border: none;
+    width: 10%;
+    height: 75px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-size: 22px;
+    border-radius: 5px;
+}
+
+#headerHome:hover, #headerGames:hover, #headerContacts:hover, #headerLogin:hover, #headerRegister:hover {
+    background: rgb(113, 56, 173);
+    cursor: pointer;
+}
+
+#headerIcon {
+    float: left;
+    width: 5%;
+    height: 75px;
 }
