--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body, html {
     padding-bottom: 25%;
 }
 
-#headerHome, #headerGames, #headerContacts {
+#headerHome, #headerContacts {
     background: rgba(0,0,0,0);
     /*border: 1px red solid;*/
     border: none;
@@ -75,7 +75,7 @@ body, html {
     border-radius: 5px;
 }
 
-#headerHome:hover, #headerGames:hover, #headerContacts:hover, #headerLogin:hover, #headerRegister:hover {
+#headerHome:hover, #headerContacts:hover, #headerGames:hover, #headerLogin:hover, #headerRegister:hover {
     background: rgb(113, 56, 173);
     cursor: pointer;
 }
@@ -85,3 +85,42 @@ body, html {
     width: 5%;
     height: 75px;
 }
+
+#headerGames {
+    background: rgba(0,0,0,0);
+    transition: background-color 0.3s ease, color 0.3s ease;
+    color: white;
+    padding: 16px;
+    border: none;
+    width: 190px;
+    height: 75px;
+    font-size: 22px;
+    border-radius: 5px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
