--- a/style.css
+++ b/style.css
@@ -110,20 +110,20 @@ body, html {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #8b4cd0;
     min-width: 160px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #8960bb;}
 
 .dropdown:hover .dropdown-content {display: block;}
 
@@ -150,4 +150,38 @@ body, html {
     float: left;
 }
 
+#loginForm {
+    background: rgba(17, 18, 19, 0.85);
+    color: white;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-top: 10%;
+    text-align: center;
+    border-radius: 15px;
+}
+
+#loginConfirm {
+    background-color: #7138ad;
+    border: none;
+    border-radius: 10px;
+    /*width: 20%;*/
+    height: 75px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-size: 22px;
+}
+
+#loginConfirm:hover {
+    background-color: #8b4cd0;
+    cursor: pointer;
+}
+
+#loginBox, #passwordBox {
+    color: white;
+    background-color: #111213;
+    border: 2px red solid;
+    border-radius: 25px;
+    height: 40px;
+    width: 40%;
+    text-align: center;
+}
 
