--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 #inFrontOfBg {
-    position: absolute;
+    position: relative;
     width: 100%;
     padding-top: 3%;
     margin-top: 75px;
@@ -50,7 +50,7 @@ html {
 }
 
 #solidInFrontOfBg {
-    /*position: absolute;*/
+    position: absolute;
     left: 0;
     width: 100%;
     background-color: #111213;
@@ -73,7 +73,7 @@ html {
 #headerRegister, #headerLogin {
     color: white;
     position: relative;
-    left: 44%;
+    left: 20%;
     background: rgba(0,0,0,0);
     /*border: 1px red solid;*/
     border: none;
@@ -200,5 +200,19 @@ html {
 
 #doUWantToRegister {
     color: white;
+}
+
+#loggedUserInfo {
+    color: white;
+    position: relative;
+    left: 22%;
+    background: rgba(0,0,0,0);
+    /*border: 1px red solid;*/
+    border: none;
+    /*width: 10%;*/
+    height: 75px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-size: 22px;
+    border-radius: 5px;
 }
 
